<resources>
    <string name="app_name">Тренируем счет</string>
    <string name="start_text">%s, готов?</string>
    <string name="start_btn">Начать</string>
    <string name="player_name">Игрок</string>

    <string name="level_name">Уровень %d</string>
    <string name="timer_name">Время: %d с</string>
    <string name="system_text">Система счисления: %d-ичная</string>

    <string name="correct_text">Верно</string>
    <string name="incorrect_text">Неверно</string>

    <string name="yes_btn">Да</string>
    <string name="no_btn">Нет</string>
    <string name="user_input_text">Ваш ответ</string>
    <string name="check_btn">Проверить</string>
    <string name="next_btn">Далее</string>

    <string name="error_name">Ошибка</string>
    <string name="error_input_text">Некорректный ввод</string>
    <string name="ok_btn">Ок</string>

    <string name="lose_errors_text">Игра окончена. Вы дали 3 неверных ответа</string>
    <string name="lose_timer_text">Время истекло</string>

    <string name="restart_text">Хотите начать игру заново?</string>
    <string name="restart_btn">Начать заново</string>
    <string name="exit_btn">Выйти из игры</string>

    <string name="username_input_text">Ник</string>
    <string name="password_input_text">Пароль</string>
    <string name="register_btn">Зарегистрироваться</string>
    <string name="login_btn">Войти</string>
    <string name="logout_btn">Выйти из аккаунта</string>

    <string name="auth_title">Авторизация</string>
    <string name="auth_empty_warning">Введите все данные</string>
    <string name="auth_user_exist_warning">Неверный логин или пароль</string>
    <string name="auth_name_warning">Пользователь с таким именем уже существует</string>
    <string name="auth_password_warning">Пароль должен состоять не менее, чем из 6 символов</string>
    <string name="auth_username_warning">Имя должно состоять не менее, чем из 2 символов</string>
    <string name="auth_ok_message">Регистрация завершена. Войдите в свой аккаунт</string>

</resources>
